# heart-disease-classification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: fe_test.csv  fe_train.csv  fe_val.csv
src/heart_disease/: __init__.py  config.py  data_loader.py  feature_engineering.py  modeling.py  visualization.py
